--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,24 +8,24 @@
 <title>Resturant: Delicious Food</title>
 <link rel="stylesheet" href="indexstyle.css">
 <meta name="robots" content="follow, index, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
-<link rel="canonical" href="https://castleswar.com/" />
+<link rel="canonical" href="https://warfumes.com/" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Castles War" />
-<meta property="og:description" content="Castles War : Online Strategy Game" />
-<meta property="og:url" content="https://castleswar.com/" />
-<meta property="og:site_name" content="Castles War" />
+<meta property="og:title" content="Food Fumes" />
+<meta property="og:description" content="Food Fumes : Delicious Food" />
+<meta property="og:url" content="https://warfumes.com/" />
+<meta property="og:site_name" content="Food Fumes" />
 <meta property="og:updated_time" content="2021-06-25T22:24:56-05:00" />
-<meta property="og:image" content="https://myforexfunds.com/wp-content/uploads/2021/05/preview.jpg" />
-<meta property="og:image:secure_url" content="https://myforexfunds.com/wp-content/uploads/2021/05/preview.jpg" />
+<meta property="og:image" content="https://warfumes.com/pics/background2.jpg" />
+<meta property="og:image:secure_url" content="https://warfumes.com/pics/background2.jpg" />
 <meta property="og:image:width" content="1363" />
 <meta property="og:image:height" content="1080" />
-<meta property="og:image:alt" content="Catles War" />
+<meta property="og:image:alt" content="Food Fumes" />
 <meta property="og:image:type" content="image/jpeg" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Castles War : Online Strategy Game" />
-<meta name="twitter:description" content="Castles War : Online Browser Strategy Game" />
-<meta name="twitter:image" content="https://myforexfunds.com/wp-content/uploads/2021/05/preview.jpg" />
+<meta name="twitter:title" content="Food Fumes : Delicious Food" />
+<meta name="twitter:description" content="Food Fumes : Delicious Food" />
+<meta name="twitter:image" content="https://warfumes.com/pics/background2.jpg" />
 </head>
 <body>
 <div id="loginBox">
