--- a/views/start.ejs
+++ b/views/start.ejs
@@ -13,7 +13,7 @@
 </div>
 
 <div id="rightBox">
-<div><%=action%></div>
+<div style="background-color:darkorange;color:#000;font-weight:bold"><%=action%></div>
 <h3>Welcome <%=user.username%> , What you like to order?</h3>
 
 
